parse AWS Secrets Manager secrets