@@ -1,5 +1,7 @@
 FROM openjdk:8-jre-slim
+# We use 'jq' in 'startup.sh'
+RUN apt-get update && apt-get install -y jq
 EXPOSE 8080
 RUN mkdir /app
 COPY DataMigration/build/libs/DataMigration.jar /app/DataMigration.jar
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/DataMigration.jar"]
+ENTRYPOINT ["./startup.sh"]
